--- a/protocol_prompts/03_protocol_reviewer_gap_analysis_coach.prompt.yaml
+++ b/protocol_prompts/03_protocol_reviewer_gap_analysis_coach.prompt.yaml
@@ -37,5 +37,11 @@ messages:
 
       Additional notes:
       Keep feedback constructive and reference best practice guidelines.
-testData: []
-evaluators: []
+testData:
+  - input: |
+      protocol_text_or_nct: NCT00000000
+    expected: Table of scores
+evaluators:
+  - name: Provides score table
+    string:
+      contains: Table of scores
