--- a/protocol_prompts/04_protocol_section_refinement.prompt.yaml
+++ b/protocol_prompts/04_protocol_section_refinement.prompt.yaml
@@ -29,5 +29,12 @@ messages:
 
       Additional notes:
       Keep language concise and align with regulatory expectations.
-testData: []
-evaluators: []
+testData:
+  - input: |
+      condition: diabetes
+      draft_section: placeholder text
+    expected: Inclusion
+evaluators:
+  - name: Contains inclusion subsection
+    string:
+      contains: Inclusion
