--- a/productivity_prompts/03_fishbone_facilitator.prompt.yaml
+++ b/productivity_prompts/03_fishbone_facilitator.prompt.yaml
@@ -26,5 +26,15 @@ messages:
 
       Additional notes:
       Limit the entire reply to 120 words.
-testData: []
-evaluators: []
+testData:
+  - vars:
+      problem: production line downtime
+    expected: |-
+      - Methods:
+        - ...
+      - Machines:
+        - ...
+evaluators:
+  - name: Mentions Methods category
+    string:
+      contains: 'Methods'
