--- a/productivity_prompts/05_raci_mapper.prompt.yaml
+++ b/productivity_prompts/05_raci_mapper.prompt.yaml
@@ -27,5 +27,16 @@ messages:
 
       Additional notes:
       Keep the response under 130 words and avoid jargon.
-testData: []
-evaluators: []
+testData:
+  - vars:
+      project_phase: Launch
+      tasks: |-
+        Design marketing plan - AB
+        Build landing page - CD
+    expected: |-
+      | Task | R | A | C | I |
+      | --- | --- | --- | --- | --- |
+evaluators:
+  - name: Outputs RACI headers
+    string:
+      contains: '| Task | R | A | C | I |'
