Add test data and evaluators to executive prompts

--- a/executive_prompts/03_executive_brief_synthesizer.prompt.yaml
+++ b/executive_prompts/03_executive_brief_synthesizer.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Executive-Ready Brief and Talking Points
-description: Turn disparate reports into a concise executive brief and talking 
+description: Turn disparate reports into a concise executive brief and talking
   points.
 model: gpt-4o
 modelParameters:
@@ -21,5 +21,10 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: ''
+    expected: ''
+evaluators:
+  - name: Output is non-empty
+    string:
+      startsWith: ''
