--- a/executive_prompts/06_strategic_growth_roadmap.prompt.yaml
+++ b/executive_prompts/06_strategic_growth_roadmap.prompt.yaml
@@ -23,5 +23,10 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: ''
+    expected: ''
+evaluators:
+  - name: Output is non-empty
+    string:
+      startsWith: ''
