--- a/executive_prompts/09_emerging_science_horizon_scan.prompt.yaml
+++ b/executive_prompts/09_emerging_science_horizon_scan.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Emerging-Science Horizon Scan
-description: Highlight emerging therapeutic areas or technologies likely to 
+description: Highlight emerging therapeutic areas or technologies likely to
   disrupt CRO services in the next three years.
 model: gpt-4o
 modelParameters:
@@ -24,5 +24,10 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: ''
+    expected: ''
+evaluators:
+  - name: Output is non-empty
+    string:
+      startsWith: ''
