--- a/executive_prompts/16_strategic_consultant_swot.prompt.yaml
+++ b/executive_prompts/16_strategic_consultant_swot.prompt.yaml
@@ -16,5 +16,10 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: ''
+    expected: ''
+evaluators:
+  - name: Output is non-empty
+    string:
+      startsWith: ''
