--- a/executive_prompts/02_crisis_management_playbook.prompt.yaml
+++ b/executive_prompts/02_crisis_management_playbook.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Crisis-Management Playbook Generator
-description: Provide a concise playbook for handling critical incidents 
+description: Provide a concise playbook for handling critical incidents
   affecting customer data.
 model: gpt-4o
 modelParameters:
@@ -21,5 +21,10 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: ''
+    expected: ''
+evaluators:
+  - name: Output is non-empty
+    string:
+      startsWith: ''
