--- a/executive_prompts/04_digital_transformation_roadmap.prompt.yaml
+++ b/executive_prompts/04_digital_transformation_roadmap.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Digital Transformation Roadmap for Clinical Operations
-description: Build a technology roadmap that shortens cycle times and enhances 
+description: Build a technology roadmap that shortens cycle times and enhances
   patient engagement.
 model: gpt-4o
 modelParameters:
@@ -21,5 +21,10 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: ''
+    expected: ''
+evaluators:
+  - name: Output is non-empty
+    string:
+      startsWith: ''
