--- a/executive_prompts/05_market_competitor_radar.prompt.yaml
+++ b/executive_prompts/05_market_competitor_radar.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Strategic Market and Competitor Radar
-description: Provide an executive briefing on growth areas, competitor moves, 
+description: Provide an executive briefing on growth areas, competitor moves,
   and regulatory shifts.
 model: gpt-4o
 modelParameters:
@@ -20,5 +20,10 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: ''
+    expected: ''
+evaluators:
+  - name: Output is non-empty
+    string:
+      startsWith: ''
