--- a/executive_prompts/07_strategic_portfolio_prioritizer.prompt.yaml
+++ b/executive_prompts/07_strategic_portfolio_prioritizer.prompt.yaml
@@ -27,5 +27,10 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: ''
+    expected: ''
+evaluators:
+  - name: Output is non-empty
+    string:
+      startsWith: ''
