--- a/executive_prompts/10_executive_trial_health_dashboard.prompt.yaml
+++ b/executive_prompts/10_executive_trial_health_dashboard.prompt.yaml
@@ -25,5 +25,10 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: ''
+    expected: ''
+evaluators:
+  - name: Output is non-empty
+    string:
+      startsWith: ''
