--- a/executive_prompts/11_investor_board_narrative_builder.prompt.yaml
+++ b/executive_prompts/11_investor_board_narrative_builder.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Investor and Board Narrative Builder
-description: Craft a concise two-slide narrative for investors and board 
+description: Craft a concise two-slide narrative for investors and board
   members.
 model: gpt-4o
 modelParameters:
@@ -19,5 +19,10 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: ''
+    expected: ''
+evaluators:
+  - name: Output is non-empty
+    string:
+      startsWith: ''
