--- a/executive_prompts/14_trial_design_optimisation_memo.prompt.yaml
+++ b/executive_prompts/14_trial_design_optimisation_memo.prompt.yaml
@@ -1,6 +1,6 @@
 ---
 name: Trial-Design Optimisation Memo
-description: Rewrite a study synopsis to accelerate startup while maintaining 
+description: Rewrite a study synopsis to accelerate startup while maintaining
   statistical power and budget.
 model: gpt-4o
 modelParameters:
@@ -25,5 +25,10 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: ''
+    expected: ''
+evaluators:
+  - name: Output is non-empty
+    string:
+      startsWith: ''
