--- a/design_prompts/02_email_assistant_go_no_go_vote.prompt.yaml
+++ b/design_prompts/02_email_assistant_go_no_go_vote.prompt.yaml
@@ -13,5 +13,16 @@ messages:
   - role: user
     content: |
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |
+      Prototype feedback:
+        - UX designer impressed with usability.
+        - Data scientist concerned about privacy.
+        - CFO notes high projected costs.
+      Should we proceed with development?
+    expected: |
+      Summary of each persona's vote and final Go or No-Go recommendation.
+evaluators:
+  - name: Mentions a Go or No-Go decision
+    string:
+      contains: "Go"
