--- a/data_management_prompts/05_clinical_etl_transformation_qc.prompt.yaml
+++ b/data_management_prompts/05_clinical_etl_transformation_qc.prompt.yaml
@@ -12,5 +12,11 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |-
+      List QC checks for transforming lab results data.
+    expected: Mentions range validations and format consistency.
+evaluators:
+  - name: Output mentions validation
+    string:
+      contains: "validation"
