--- a/data_management_prompts/09_sop_gap_analysis.prompt.yaml
+++ b/data_management_prompts/09_sop_gap_analysis.prompt.yaml
@@ -11,5 +11,11 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |-
+      Review SOPs for data entry processes.
+    expected: Identifies missing version controls.
+evaluators:
+  - name: Output mentions SOP
+    string:
+      contains: "SOP"
