--- a/data_management_prompts/04_clinical_etl_mapping_spec.prompt.yaml
+++ b/data_management_prompts/04_clinical_etl_mapping_spec.prompt.yaml
@@ -12,5 +12,11 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |-
+      Map source patient records to target schema fields.
+    expected: Includes field-to-field mappings.
+evaluators:
+  - name: Output mentions mapping
+    string:
+      contains: "mapping"
