--- a/data_management_prompts/06_clinical_etl_pipeline_review.prompt.yaml
+++ b/data_management_prompts/06_clinical_etl_pipeline_review.prompt.yaml
@@ -12,5 +12,11 @@ messages:
   - role: user
     content: |-
       {{input}}
-testData: []
-evaluators: []
+testData:
+  - input: |-
+      Assess pipeline stages for bottlenecks.
+    expected: Identifies slow transformations and load issues.
+evaluators:
+  - name: Output mentions pipeline
+    string:
+      contains: "pipeline"
